[tool.poetry]
name = "hit"
version = "0.1.0"
description = "A bare minimum implementation of git in python"
authors = ["Subham Singh <subham.singh@hackerearth.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.1.6"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
